--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "authom": "~0.4.17",
     "lodash": "~1.3.1",
-    "express": "~3.3.5"
+    "express": "~3.3.5",
+    "oauth2-provider": "~1.3.0"
   }
 }
